비즈니스 로직 변화로 인한 comment 테스트코드 수정